# uniswap-autopilot

./: .coveragerc  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  RISK_POLICY.md  policy.yaml  pyproject.toml
.github/workflows/: test.yml
data/: .gitkeep
examples/: lp_analytics.py  swap_quote.py
scripts/: audit_summary.py  sync_shared.py
src/uniswap_autopilot/: __init__.py  audit.py  policy.py  price_feed.py  state_machine.py
src/uniswap_autopilot/analytics/: il_calculator.py  portfolio.py  position.py  range_suggest.py
src/uniswap_autopilot/common/: approval_cleanup.py  check_balance.py  common.py  deep_link.py  gas.py
src/uniswap_autopilot/data/: auto_trade_policy.example.json  chains.json  common-token-addresses.json
src/uniswap_autopilot/execute/: broadcast.py  detect.py  telegram_confirm.py
src/uniswap_autopilot/execute/_internal/: __init__.py  constants.py  preflight.py  pure_signer.py  rpc.py  signer.py  submit.py  tx.py
src/uniswap_autopilot/lp/: compare_pools.py
src/uniswap_autopilot/lp/v2/: approve.py  build_tx.py  flow.py  pair.py  positions.py
src/uniswap_autopilot/lp/v3/: approve.py  auto_rebalance.py  build_tx.py  compound.py  flow.py  pool.py  position.py  tick.py
src/uniswap_autopilot/lp/v4/: approve.py  build_tx.py  flow.py  pool.py  position.py
src/uniswap_autopilot/search/: risk.py  search.py
src/uniswap_autopilot/swap/: __init__.py  deep_link.py  flow.py
src/uniswap_autopilot/swap/extensions/: __init__.py  (+3 more)
tests/: test_audit.py  test_compound_rebalance.py  test_policy.py  test_risk.py  test_state_machine.py  test_telegram_confirm.py  test_token_cache.py  test_uniswap_lp.py  test_uniswap_trading.py
(+11 files in other folders)
