[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uniswap-autopilot"
version = "0.5.1"
description = "Automated swap execution, LP management, and analytics for Uniswap v2/v3/v4"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "counterfactual5"},
]
keywords = ["uniswap", "defi", "swap", "liquidity", "lp", "ethereum", "evm", "trading"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

# Zero external dependencies — pure Python standard library only.
# Optional [signer] extra for on-chain transaction signing & broadcasting.
dependencies = []

[project.optional-dependencies]
signer = ["eth-account>=0.10.0"]
dev = ["pytest>=7.0", "pytest-cov", "ruff>=0.1.0"]
all = ["eth-account>=0.10.0"]

[project.urls]
Repository = "https://github.com/counterfactual5/uniswap-autopilot"
Issues = "https://github.com/counterfactual5/uniswap-autopilot/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 120
target-version = "py310"
